--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -337,11 +337,13 @@ a:link,
   display: grid;
   -ms-grid-columns: (minmax(10rem, 1fr))[4];
       grid-template-columns: repeat(4, minmax(10rem, 1fr));
-  grid-gap: 3rem; }
+  grid-gap: 4rem; }
 
 .step {
   display: -ms-grid;
-  display: grid; }
+  display: grid;
+  -ms-flex-line-pack: start;
+      align-content: start; }
   .step__text {
     font-size: 1.8rem;
     color: #9cb380;
